fixing search button wrapping on kindle fire pages with multiple inputs

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -295,6 +295,10 @@ input.error-input{
     box-shadow: none;
 }
 
+.add-clear-span {
+	display:inline-block;
+}
+
 .icon-link, .cart-link, .side-menu{
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
